All tests for App, ApplicationLauncher